* Teste para endpoint findAll da class resource